# git-facade

./: Cargo.toml  LICENSE  NOTICES.md  README.md  package-lock.json  publish.sh
.github/workflows/: ci.yml  publish-wgpu-sha1.yml
benches/: solver.rs
git-facade/: Cargo.toml
git-facade/benches/: solver.rs  solver_long.rs
git-facade/src/: commit.rs  lib.rs  main.rs  signing.rs
git-facade/src/solver/: concurrent.rs  gpu.rs  mod.rs  singlethreaded.rs  template.rs
src/: commit.rs  digest.rs  git.rs  main.rs
src/solver/: concurrent.rs  mod.rs  singlethreaded.rs  template.rs
wgpu-sha1/: Cargo.toml
wgpu-sha1/src/: lib.rs  sha1.wgsl
wgpu-sha1/tests/: parity.rs
