[package]
name = "wgpu-sha1"
version = "0.2.0"
edition = "2021"
description = "GPU-accelerated SHA1 hashing using wgpu compute shaders"
license = "MIT"
repository = "https://github.com/cmeister2/git-facade"
keywords = ["sha1", "gpu", "wgpu", "compute-shader"]
categories = ["cryptography", "algorithms"]

[dependencies]
wgpu = "29"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }

[dev-dependencies]
sha1 = "0.10"
hex = "0.4"

